# CryptomatteCpp

./: CMakeLists.txt  Cryptomatte.cpp  README.md
cmake/: FindNuke.cmake  FindRapidJSON.cmake
